# homeops

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  .spectral.yaml  AGENTS.md  CLAUDE.md  NEXT.md  app.json  docker-compose.yml  eslint.config.js  openapi.snapshot.json  orval.config.js  orval.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  turbo.json
backend/: .coverage  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  extensions.py  logging_config.py
backend/app/api/: __init__.py  auth.py  dashboard.py  expenses.py  health.py  households.py  invitations.py  notifications.py  obligations.py  schemas.py  security.py  totp.py  users.py
backend/app/db/: __init__.py  base.py  models.py  rls.py  session.py
backend/app/domain/: __init__.py  enums.py  money.py  recurrence.py
backend/app/notifications/: __init__.py
backend/app/repositories/: __init__.py  audit.py  devices.py  expenses.py  households.py  invitations.py  memberships.py  notifications.py  obligations.py  password_reset_tokens.py  roles.py  users.py
backend/app/security/: __init__.py  csrf.py  device_naming.py  jwt_tokens.py  passwords.py  rbac.py  recovery_codes.py  refresh_tokens.py  totp.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  authorization.py  avatar_service.py  dashboard_service.py  device_service.py  exceptions.py  expense_service.py  household_service.py  invitation_service.py  notification_service.py  obligation_service.py  totp_service.py
backend/app/storage/: __init__.py  base.py  local.py
backend/app/tasks/: __init__.py  __main__.py  jobs.py  notification_worker.py  scheduler.py
backend/migrations/: env.py
backend/migrations/versions/: 7267cd3d0e03_initial_schema.py  a1b2c3d4e5f6_totp_2fa.py  b1c2d3e4f5a6_invitations.py  (+9 more)
backend/tests/: conftest.py
(+393 files in other folders)
