[project]
name = "homeops-backend"
version = "0.0.0"
description = "HomeOps backend — layered Flask (APIFlask) API, multi-tenant with RLS."
requires-python = ">=3.12"
dependencies = [
    "apiflask>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "flask-limiter>=3.8",
    "structlog>=24.4",
    "cryptography>=43.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.8",
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "SIM", "RUF"]
# S101 (assert) is fine in tests; handled per-file below.

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
# Migrations: a dev app-role password (S105/S608) and long DDL strings are intentional.
"migrations/**" = ["E501", "S105", "S608"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

# Strict on the layers that carry business rules (plan §1).
[[tool.mypy.overrides]]
module = ["app.domain.*", "app.services.*", "app.security.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
    "integration: tests that require a real PostgreSQL (Testcontainers).",
]
